--- a/styles/pagesCss/Cart.module.css
+++ b/styles/pagesCss/Cart.module.css
@@ -343,7 +343,7 @@
         align-items: center;
     }
     .coupounSectionr{
-        padding-top: 20px;
+        padding-top: 10px;
     }
     .inputr input{
         width: 90%;
@@ -352,8 +352,21 @@
         padding: 6px 50px;
     }
     .cartButtonr{
-        margin: 5px 10px;
+        margin: 2px 10px;
         padding: 6px 60px;
     }
     
+}
+.responsiveCart{
+    display: none;
+}
+
+@media screen and (max-width:580px) {
+    .cart{
+        display: none;
+    }
+    .responsiveCart{
+        display: flex;
+        flex-direction: column;
+    }
 }
