--- a/styles/pagesCss/Cart.module.css
+++ b/styles/pagesCss/Cart.module.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap');
+
 .cart {
     width: 100%;
     height: max-content;
-    padding: 20px 17vw;
+    padding: 0 17vw;
+    padding-top: 20px;
+    padding-bottom: 5px;
 }
 
 .heading {
@@ -132,14 +136,19 @@
         width: 10rem;
         height: 1.7rem;
     }
+
     .cart {
-        padding: 20px 2vw;
+        width: 100%;
+        padding: 0 2vw;
+        padding-top: 20px;
+        padding-bottom: 5px;
     }
     .itemUl li {
         font-size: 1.5vw;
         padding-right: 1vw;
     }
-    .heading li{
+
+    .heading li {
         padding-left: 2rem;
     }
 
@@ -157,6 +166,7 @@
         font-size: 1.6vw;
     }
 }
+
 
 @media screen and (max-width:600px) {
     .input input {
@@ -179,7 +189,9 @@
     }
 
     .cart {
-        padding: 20px 2vw;
+        padding: 0 2vw;
+        padding-top: 20px;
+        padding-bottom: 5px;
     }
 
     .heading {
@@ -250,6 +262,7 @@
     align-items: left;
     padding-bottom: 2rem;
 }
+
 .productr {
     display: flex;
     flex-direction: row;
@@ -300,28 +313,35 @@
 
 .inputr {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     width: 100%;
+    flex-direction: row;
+    justify-content: space-between
 }
 
 .coupounSectionr {
-    height: 90px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
 .inputr input {
     height: 1.9rem;
-    width: 49vw;
+    width: 40%;
     padding: 2px 0;
     border: .8px solid gainsboro;
     padding-left: 10px;
-    margin-left: 15px;
     border-radius: 5px;
-    margin-right: 1rem;
+}
+
+/* .cartButtons{
+    display: flex; 
+    justify-content: space-between;
+} */
+.inputr input:focus {
+    outline: 1px solid rgb(46, 170, 241);
+    background-color: rgba(63, 145, 192, 0.089);
 }
 
 .input input::placeholder {
@@ -329,44 +349,142 @@
     font-weight: 600;
 }
 
+.coupoun {
+    margin-right: 2px;
+}
+
 .cartButtonr {
-    padding: 3px 13px;
+    padding: 3px 8px;
     color: white;
-    border-radius: 2px;
+    border-radius: 4px;
+
     background-color: var(--main-bg-color);
 }
 
 
-@media screen and (max-width:370px) {
-    .inputr{
+@media screen and (max-width:469px) {
+    .inputr {
         flex-direction: column;
-        align-items: center;
     }
-    .coupounSectionr{
+
+    .coupounSectionr {
         padding-top: 10px;
     }
-    .inputr input{
-        width: 90%;
+
+    .inputr input {
+        width: 100%;
     }
-    .inputr button{
-        padding: 6px 50px;
+
+    .cartButtons {
+        padding-top: 20px;
+        display: flex;
+        justify-content: space-evenly;
     }
-    .cartButtonr{
-        margin: 2px 10px;
-        padding: 6px 60px;
+
+    .cartButtonr {
+        padding: 4px 20px;
     }
-    
+
 }
-.responsiveCart{
+
+.responsiveCart {
     display: none;
 }
 
 @media screen and (max-width:580px) {
-    .cart{
+    .cart {
         display: none;
     }
-    .responsiveCart{
+
+    .responsiveCart {
         display: flex;
         flex-direction: column;
+    }
+}
+
+
+/* Checkout */
+
+.checkoutBlock {
+    width: 100%;
+    padding: 0 17vw;
+    text-align: right;
+    display: flex;
+    justify-content: right;
+    padding-bottom: 20px;
+}
+
+.cartTotal {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    border: .8px solid gainsboro;
+}
+.headingTotal{
+    background-color: #eaeaea ;
+}
+
+.headingTotal h1 {
+    text-align: center;
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 15px 0;
+    font-family: 'Josefin Sans', sans-serif;
+}
+.amountTotal{
+    width: 100%;
+}
+
+.subTotals,
+.totals {
+    display: flex;
+    padding: 10px 0;
+    margin:  0 10px;
+    font-family: 'Josefin Sans', sans-serif;
+
+}
+.subTotals div,.totals div{
+    width: 50%;
+    text-align: center;
+    padding: 10px 0;
+    border-bottom: 1px solid gainsboro;
+}
+
+.checkout{
+    width: 100%;
+    text-align: center;
+    padding-bottom: 10px;
+}
+.checkout button{
+    width: 90%;
+    background-color: var(--main-bg-color);
+    padding: 9px 0;
+    color: white;
+    font-family: 'Montserrat';
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    border-radius: 4px;
+}
+
+@media screen and (max-width:816px) {
+    .checkoutBlock{
+        padding: 0 2vw;
+        padding-bottom: 20px;
+    }
+    .cartTotal{
+        width: 70%;
+    }
+}
+@media screen and (max-width:581px) {
+    .checkoutBlock{
+        padding: 0 2vw;
+        padding-bottom: 20px;
+    }
+    .cartTotal{
+        width: 100%;
     }
 }
